small spacing fix

--- a/src/_includes/components/css/submit-order.css
+++ b/src/_includes/components/css/submit-order.css
@@ -202,6 +202,10 @@ main label {
   flex-direction: column;
 }
 
+.tree-name p a {
+  text-decoration: none;
+}
+
 details > summary:focus {
   outline: none;
 }
